# airowl

./: README.md  platformio.ini
Designfiles/: README.md
Designfiles/3D files/3mf for 3d printing/: Read me.txt
Designfiles/3D files/DXF/: Facia back plate 5mm (Black).dxf  Read me.txt
Designfiles/3D files/Front facia UV printing/: Read me.txt
Designfiles/Backcover/: Owl_2.0_component_case_V2.4.4.3MF  Owl_2.0_component_case_V2.4.4.STEP
Designfiles/Frontfacia/: Front facia 1mm.dxf
Firmware/: README.md  firmware.md  replace_gdb.py
Firmware/lib/TFT_eSPI/: User_Setup_Select.h
Firmware/src/m5stack/: Sensor.h  lv_conf.h  main.cpp  time_func.h
Mountingboard/: README.md
Mountingboard/AirOwl_v1/: AirOwl  AirOwl_v1.kicad_pcb  AirOwl_v1.kicad_prl  AirOwl_v1.kicad_pro  AirOwl_v1.kicad_sch  fp-info-cache  ~AirOwl_v1.kicad_sch.lck
Mountingboard/AirOwl_v1/3D/: AirOwl_v1.step
Mountingboard/AirOwl_v1/bom/: ibom.html
Mountingboard/AirOwl_v1/jlcpcb/: project.db
boards/: m5stack-coreS3-mah.json
src/m5stack/: Sensor.h  lv_conf.h  main.cpp  pm1.h  time_func.h
src/m5stack/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
src/m5stack/ui/fonts/: ui_font_clock24.c
src/m5stack/ui/images/: ui_img_582762761.c  ui_img_airowl_1_png.c  ui_img_oizom_logo_png.c  ui_img_sls_logo_png.c
src/m5stack/ui/screens/: ui_Intro.c  ui_PM10graph.c  ui_PM1graph.c  ui_PM25graph.c  ui_PM4graph.c  ui_Screen1.c  ui_Screen2.c  ui_Screen3.c  ui_Screen4.c  ui_Screen5.c  ui_Screen6.c  ui_Screen7.c  ui_Screen8.c  ui_TVOCgraph.c  ui_dashboard.c  ui_owl.c
(+43 files in other folders)
